--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
     font-family: 'Lato', sans-serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Quicksand', sans-serif;
-  background: rgb(200,219,225);
-
+  background:#EDC7B7;
     color: #333;
     margin: 0;
     padding: 0;
@@ -22,10 +21,14 @@ font-family: 'Quicksand', sans-serif;
 }
 
 header {
-    background-color: #404576;
-    color: #fff;
+    background-color: #AC3B61;
+    color: #EEE2DC;
     padding: 1em 0;
     padding-left: 2em;
+    a:link{border-radius:5px; color:#BAB2B1; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#123C69;}
+
+    a:visited{border-radius:5px; color:#BAB2B1; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#123C69;}
+    a:hover{color:#fff;font-size:115%;}
 }
 
 nav ul {
@@ -48,7 +51,7 @@ nav a {
 }
 
 section {
-    background: rgb(200,219,225);
+    background:#EEE2DC; 
     padding: 40px 0;
     a:link{color:blue; text-decoration:none;}
     a:visited{color:#404576; text-decoration:none;}
@@ -56,9 +59,12 @@ section {
 }
 
 .section-about {
-    background: rgb(200,219,225);
+    background: #EEE2DC;
     padding-left: 2em;
     padding-right: 2em;
+    a:link{color:blue; text-decoration:none;font-family:monospace;}
+    a:visited{color:#404576; text-decoration:none;}
+    a:hover{color:black; text-decoration:solid;font-size:115%;}
 }
 
 .section-portfolio {
@@ -69,14 +75,18 @@ section {
 }
 
 .section-blog {
-    background: rgb(200, 219, 225);
+    background: #EEE2DC;
     color: #080505;
     padding-left: 2em;
     padding-right: 2em;
+    a:link{color:#900; text-decoration:none;font-family:monospace;}
+    a:visited{color:#404576; text-decoration:none;font-family:monospace;}
+    a:hover{color:black; text-decoration:solid;font-size:115%;}
+
 }
 
 h2 {
-    border-bottom: 2px solid #333;
+    border-bottom: 2px solid #330;
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
@@ -86,7 +96,11 @@ h2 {
     overflow: hidden;
     
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #EDC7B7;
+
+    a:link{color:#900 ; text-decoration:none;font-family:monospace;}
+    a:visited{color:#404576; text-decoration:none;font-family:monospace;}
+    a:hover{color:black; text-decoration:solid;font-size:115%;}
 }
 
 .project img {
@@ -105,8 +119,8 @@ h3 {
 }
 
 footer {
-    background-color: #22385c;
-    color: rgb(200,219,225);
+    background-color: #123C69;
+    color: #fff;
     text-align: center;
     padding: 1em 0;
 }
