--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Lato', sans-serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Quicksand', sans-serif;
-  background:#EDC7B7;
+  background:#EEE2DC;
     color: #333;
     margin: 0;
     padding: 0;
@@ -28,7 +28,7 @@ header {
     a:link{border-radius:5px; color:#BAB2B1; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#123C69;}
 
     a:visited{border-radius:5px; color:#BAB2B1; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#123C69;}
-    a:hover{color:#fff;font-size:115%;}
+    a:hover{color:#fff;font-size:100%;}
 }
 
 nav ul {
@@ -81,12 +81,13 @@ section {
     padding-right: 2em;
     a:link{color:#900; text-decoration:none;font-family:monospace;}
     a:visited{color:#404576; text-decoration:none;font-family:monospace;}
-    a:hover{color:black; text-decoration:solid;font-size:115%;}
+    a:hover{color:black; text-decoration:solid;font-size:100%;}
 
 }
 
 h2 {
-    border-bottom: 2px solid #330;
+  color:#AC3B61;
+    border-bottom: 2px solid #430;
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
@@ -96,7 +97,7 @@ h2 {
     overflow: hidden;
     
     border-radius: 10px;
-    box-shadow: 0 0 10px #EDC7B7;
+    box-shadow: 0 0 10px #ac3b50;
 
     a:link{color:#900 ; text-decoration:none;font-family:monospace;}
     a:visited{color:#404576; text-decoration:none;font-family:monospace;}
