--- a/style.css
+++ b/style.css
@@ -1,128 +1,105 @@
 body {
-    font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;
-font-family: 'Quicksand', sans-serif;
-  background:#EEE2DC;
+  font-family:sans-serif;
+  background:#fff;
     color: #333;
     margin: 0;
     padding: 0;
     line-height: 1.6;
+    a:link{color:#0E6c9c; text-decoration:none;font-family:monospace,sans-serif;font-weight:normal;}
+    a:visited{color:#404576; text-decoration:none underline auto;font-family:monospace,sans-serif;font-weight:normal;}
+    a:hover{color:black; text-decoration:underline;font-size:100%;font-weight:bold;}
+
 }
-@font-face {
-    font-family: 'Lato', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Quicksand', sans-serif;
-    src: url(Montserrat-VariableFont_wght.ttf);
-}
+ul{ 
+    list-style-type:none;
+    margin: 0em;
+    padding: 0em;
+    list-style-position:outside;
+} 
 .container {
     max-width: 1200px;
     margin: 0 auto;
+  justify-content: space-between;
 }
 
 header {
-    background-color: #AC3B61;
-    color: #EEE2DC;
+    background-color: #000;
+    color: #fff;
     padding: 1em 0;
     padding-left: 2em;
-    a:link{border-radius:5px; color:#BAB2B1; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#123C69;}
+    a:link{border-radius:5px;
+  text-decoration-thickness:50%;
+    color:#fff; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#0E6C9C;font-weight:bold;}
+    a:visited{border-radius:5px; font-weight:bold;
+  text-decoration-thickness:50%;
+    color:#fff; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#0e6c9c;}
 
-    a:visited{border-radius:5px; color:#BAB2B1; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#123C69;}
-    a:hover{color:#fff;font-size:100%;}
+    a:hover{color:#fff;text-shadow:#fff;text-radius:30px;font-size:100%;}
+
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
 
+
+ .blog-post {
+    margin-bottom: 40px;
+    overflow: hidden;
+  padding-up:10px;
+  padding:30px;
+   background:#fff; 
+    border-radius: 10px;
+    box-shadow: 0 0 10px #47f9ff;
+  ul{
+    list-style:disc;
+    padding-left:2em;
+    }
+}
+.blog-post:hover{
+  transform: translateY(-3px);
+    box-shadow: 0 8px 12px #0e6c9c; 
+}
 nav li {
     display: inline;
-    margin-right: 20px;
-}
-
-nav a {
-    text-decoration: none;
-    color: #fff;
-    link: #fff;
-    visited: #fff;
-    font-weight: bold;
+    margin-left: 0px;
+  padding:5px;
 }
 
 section {
-    background:#EEE2DC; 
+    background:#fff; 
     padding: 40px 0;
-    a:link{color:blue; text-decoration:none;}
-    a:visited{color:#404576; text-decoration:none;}
-    a:hover{color:black; text-decoration:solid;font-size:115%;}
 }
 
 .section-about {
-    background: #EEE2DC;
-    padding-left: 2em;
-    padding-right: 2em;
-    a:link{color:blue; text-decoration:none;font-family:monospace;}
-    a:visited{color:#404576; text-decoration:none;}
-    a:hover{color:black; text-decoration:solid;font-size:115%;}
-}
-
-.section-portfolio {
-    background: #404576;
-    color: #fff;
+    background: #fff;
     padding-left: 2em;
     padding-right: 2em;
 }
 
 .section-blog {
-    background: #EEE2DC;
+    background: #fff;
     color: #080505;
     padding-left: 2em;
     padding-right: 2em;
-    a:link{color:#900; text-decoration:none;font-family:monospace;}
-    a:visited{color:#404576; text-decoration:none;font-family:monospace;}
-    a:hover{color:black; text-decoration:solid;font-size:100%;}
-
 }
 
 h2 {
-  color:#AC3B61;
+  color:#010D13;
     border-bottom: 2px solid #430;
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
 
-.project, .blog-post {
-    margin-bottom: 40px;
-    overflow: hidden;
-    
-    border-radius: 10px;
-    padding: 5em;
-    box-shadow: 0 0 10px #ac3b50;
 
-    a:link{color:#900 ; text-decoration:none;font-family:monospace;}
-    a:visited{color:#404576; text-decoration:none;font-family:monospace;}
-    a:hover{color:black; text-decoration:solid;font-size:115%;}
-}
-
-.project img {
+img {
     width: 100%;
     height: auto;
     display: block;
     border-radius: 8px 8px 0 0;
 }
 
-.project-content, .blog-post {
-    padding: 20px;
-}
 
 h3 {
     margin-top: 0;
-}
-
-footer {
-    background-color: #123C69;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
+  a:link{color:#000;text-decoration:none;font-family:sans-serif;font-weight:bold;}
+  a:visited{color:#000;text-decoration:none;font-family:sans-serif;font-weight:bold;}
 }
 
