--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ ul{
     margin: 0 auto;
   justify-content: space-between;
 }
+.icon {
+  height: 20px;
+    width:20px;
+    display:block;
+}
 
 header {
     background-color:#25283d;
@@ -35,7 +40,8 @@ header {
 
 }
 
-
+.imageflex{display:flex;}
+.imageflexcontent { margin-left: 5px; margin-top: 0; }
 
  .blog-post {
     margin-bottom: 40px;
@@ -79,10 +85,18 @@ nav li {
 section {
     padding: 2em;
 }
-
+meow {
+  font-family:monospace;
+  text-decoration:none;
+  font-size:12px;
+}
 .section-about {
     padding-left: 2em;
     padding-right: 2em;
+h3 {
+    margin-bottom: 0px;
+  color:#312D6D;text-decoration:solid;font-family:sans-serif;font-weight:bold;
+}
 }
 
 .section-blog {
