--- a/style.css
+++ b/style.css
@@ -57,10 +57,10 @@ header {
   a:link {
     border-radius: 5px;
     text-decoration-thickness: 50%;
-    color: #fff;
+    color: #f0f0ff;
     text-decoration: none;
     display: inline-block;
-    padding: 0.5em;
+    padding: 0.55em;
     background-color: #453F78;
   }
 
@@ -75,7 +75,6 @@ header {
   a:hover {
     color: #fff;
     text-shadow: 0 0 5px #fff;
-    border-radius: 30px;
     font-size: 100%;
   }
 
@@ -93,7 +92,7 @@ header {
 .blog-post {
   margin-bottom: 40px;
   overflow: hidden;
-  padding-up: 10px;
+  padding-top: 10px;
   padding: 30px;
   color: #25283D;
   background: #fbfbff;
@@ -175,6 +174,7 @@ meow {
 
 .section-blog {
   color: #080505;
+  font-family: Montserrat, sans-serif;
   padding-left: 2em;
   padding-top: 1em;
   padding-right: 2em;
